<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >


                <item
                    android:id="@+id/your_lunch"
                    android:icon="@drawable/ic_lunch"
                    android:title="@string/your_lunch" />
                <item
                    android:id="@+id/chat"
                    android:icon="@drawable/ic_chat_black_24dp"
                    android:title="@string/chat" />

                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/settings"

                    />

                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />





</menu>

