<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/resto_flou2">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="399dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/titleColor"
        android:textSize="@dimen/default_big_title_size"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="93dp"
        android:layout_height="85dp"
        android:layout_below="@+id/materialTextView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="19dp"
        android:contentDescription="@string/user_avatar"
        app:srcCompat="@drawable/ic_person_black_24dp"
        tools:srcCompat="@drawable/ic_person_black_24dp" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/materialTextView"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:layout_toEndOf="@+id/profile_img"
        android:text="@string/username"
        android:textColor="@color/titleColor"
        android:textStyle="bold"
        android:textSize="@dimen/default_text_size"/>

    <TextView
        android:id="@+id/usermail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/profile_img"
        android:text="@string/e_mail"
        android:textColor="@color/titleColor" />

</RelativeLayout>